# AutoTx

./: .env.example  .gitignore  API.md  Biconomy.md  Dockerfile  LICENSE  README.md  benchmarks.json  benchmarks.py  fork.Dockerfile  get_env_vars.py  main.py  multi_send_test.py  pyproject.toml  smart-account-api.Dockerfile
.github/: CI.yaml  CODEOWNERS  benchmarks.yaml
.github/workflows/: CI.yaml  benchmarks.yaml  cd.dev-agent.yaml  cd.dev-functions.yaml  cd.prod-agent.yaml  cd.pypi.yaml  ci.yaml
autotx/: AutoTx.py  __init__.py  auto_tx_agent.py  auto_tx_tool.py  autotx_agent.py  autotx_autogen_agent.py  autotx_tool.py  build_check.py  chain_fork.py  cli.py  db.py  eth_address.py  get_env_vars.py  intents.py  load_tokens.py  main.py  models.py  multi_send.py  patch.py  server.py  setup.py  smart_account_api.py  task_logs.py  token.py  transactions.py
autotx/agents/: DelegateResearchTokensAgent.py  ExampleAgent.py  InnerResearchTokensAgent.py  ResearchTokensAgent.py  ResearchTokensAutogenAgent.py  SendTokensAgent.py  SendTokensAutogenAgent.py  SwapTokensAgent.py  SwapTokensAutogenAgent.py  TokenResearchAgent.py  __init__.py  erc20.py  safe.py  uniswap.py
autotx/config/: addresses.json  agents.json
autotx/helper_agents/: clarifier.py  manager.py  user_proxy.py  verifier.py
autotx/scripts/: local_environment.py
autotx/serverless_functions/: get_user_tasks.py  main.py
autotx/smart_accounts/: api_smart_account.py  local_biconomy_smart_account.py  safe_smart_account.py  smart_account.py
autotx/tests/: conftest.py  test_analyze_prompt.py  test_benchmarks.py  test_multiple_agents.py  test_swap.py  test_tokens.py  test_tokens_regression.py
autotx/utils/: LlamaClient.py  PreparedTx.py  agents_config.py  color.py  configuration.py  constants.py  dump_pydantic_list.py  format_amount.py  http_requests.py  io_silent.py  is_dev_env.py  llm.py
autotx/wallets/: api_smart_wallet.py  cli_smart_wallet.py  safe_smart_wallet.py  smart_wallet.py
sage_agent/: agent.py  agents.py  main.py  multi_send.py  sage.py  sage_temp.py  swap.py  tasks.py
sage_agent/agents/: erc20.py  safe.py  uniswap.py
sage_agent/config/: addresses.json  agents.json
sage_agent/scripts/: local_environment.py  start_local_environment.py
sage_agent/tests/: conftest.py  test_benchmarks.py  test_send.py  test_send_and_swap.py  test_swap.py
sage_agent/tools/: erc20.py  ethereum.py  lifi.py  safe.py  uniswap.py
sage_agent/utils/: agents_config.py  configuration.py  ethereum.py  llm.py
smart_account_api/: package.json
smart_account_api/src/: account-abstraction.ts  constants.ts  index.ts  networks.ts
supabase/: config.toml
supabase/migrations/: 20240606183512_init.sql  20240611191742_task-error.sql  20240614104522_intents.sql  20240617165316_submitting-txs.sql  20240626194330_errors-and-logs.sql  20240702110412_feedback.sql
utils/: __init__.py  build_transfer_erc20.py  build_transfer_eth.py  cache.py  constants.py  deploy_mock_erc20.py  deploy_multicall.py  deploy_safe.py  deploy_safe_with_create2.py  get_eth_balance.py  mock_erc20.py  send_eth.py  send_tx.py  transfer_erc20.py
(+98 files in other folders)
