[tool.poetry]
name = "sage-agent"
version = "0.1.0"
description = ""
authors = ["Nestor Amesty <nestor09amesty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
crewai = "0.19.0"
pyright = "^1.1.350"
click = "^8.1.7"
python-dotenv = "^1.0.1"
safe-eth-py = "^5.8.0"
eth-account = "^0.11.0"
web3 = "^6.15.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
start-env = "sage_agent.scripts.start_local_environment:main"
ask = "sage_agent.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
