[tool.poetry]
name = "autotx"
version = "0.1.0"
description = ""
authors = ["Nestor Amesty <nestor09amesty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai-tools = "0.1.1"
pyright = "^1.1.350"
click = "^8.1.7"
safe-eth-py = "^5.8.0"
eth-account = "^0.11.0"
web3 = "^6.15.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
crewai = "0.22.5"
coingecko = "^0.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
start-fork = "autotx.chain_fork:start"
stop-fork = "autotx.chain_fork:stop"
ask = "autotx.cli:run"
agent = "autotx.cli:agent"
load_tokens = "autotx.load_tokens:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
